--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="chat-container">
+        <div class="chat-header">
+            <h1>مرحبًا بك في الشات بوت</h1>
+        </div>
         <div id="chat-log" class="chat-log"></div>
         <div id="chat-input" class="chat-input">
             <input type="text"  id="user-input" placeholder="ادخل الرسالة">
