--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
-            <h1>مرحبًا بك في الشات بوت</h1>
+            <h1> chat bot مرحبًا بك في الشات بوت</h1>
         </div>
         <div id="chat-log" class="chat-log">
             <div class="message user">
